[feat]: Implementation In progress, Sonar added